<resources>
    <string name="app_name">In The Fridge</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_descrip">Description (optional)</string>
    <string name="button_save">Add Item</string>
    <string name="empty_not_saved">Missing values, entry not saved.</string>
    <string name="label_hours">Hours</string>
    <string name="label_days">Days</string>
    <string name="button_delete">Delete</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete_question">Delete this item?</string>

    <string name="detail_open_date">Opened on: %1$s</string>
    <string name="detail_expire_date">Expiry date: %1$s</string>
    <string name="detail_expire_date_miss">Expiry date not set</string>
    <string name="detail_shelf_life">Shelf life: %1$s %2$s</string>
    <string name="detail_shelf_life_miss">Shelf life not set</string>
    <string name="detail_expire_interval_future">Expires: %1$s</string>
    <string name="detail_expire_interval_past">Expired: %1$s</string>
    <string name="detail_expire_interval_miss">Expires: n/a</string>

    <plurals name="plural_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <plurals name="plural_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
</resources>
